# Qt-ideas

./: .gitignore  CMakeLists.txt  README.md
Book/: CMakeLists.txt  main.cc
CMakeModules/: linux.cmake  macos.cmake  windows.cmake
CUDA/: CMakeLists.txt
TUM/: CMakeLists.txt  label.cc  layouts.cc
src/: main.cpp
